scss/custom/components/_base.scss
/*------------------------------------*\
    $BASE
\*------------------------------------*/
/**
 * This section houses styles for the base elements of the page, generally body and
 * html
 */


/**
 * Fix fatty fonts in Chrome and Firefox on Mac:
 * http://maximilianhoffmann.com/posts/better-font-rendering-on-osx
 */
%fix-fatty-fonts {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

/**
 * Use sticky footer:
 * http://philipwalton.github.io/solved-by-flexbox/demos/sticky-footer/
 *
 * requires flex: 1 0 auto; on primary content
 */
%sticky-footer {
  @include display(flex);
  @include flex-direction(column);
  min-height: 100vh;

  /**
   * don't use sticky footer on IE10 >=
   *
   * just don't bother
   */
  @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
    display: block;
  }
}

/**
 * Prevent Chrome and Safari from flashing when a user taps on mobile
 */
@if $responsive {
  html { -webkit-tap-highlight-color: transparent;}
}

html, body, button, input, select, textarea {
  // @extend %fix-fatty-fonts;
}

/**
 * Fix IE8 not showing extended headers and footers when overflowing horizontally
 */
body {
  // @extend %sticky-footer;

  .ie8 & { display: table;}
}



/**
 * get 60fps scrolling by disabling pointer events:
 * http://www.thecssninja.com/javascript/pointer-events-60fps
 */
.disable-hover,
.disable-hover * { pointer-events: none !important;}

